# deepcopy

./: Debug.hs  LICENSE  Main.hs  deepcopy.cabal
Generics/: DeepCopy.hs
Generics/DeepCopy/: GHC.hs  TH.hs
Generics/DeepCopy/TH/: Class.hs  Ty.hs
