name:                deepcopy
version:             0.1.0.0
synopsis:            Generic copying of IORefs embedded deep in datatypes
-- description:
license:             BSD3
license-file:        LICENSE
author:              Daniel Gröber
maintainer:          dxld@darkboxed.org
-- copyright:
category:            Generics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:   Generics.DeepCopy
                     Generics.DeepCopy.GHC
                     Generics.DeepCopy.TH
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8
  -- hs-source-dirs:
  default-language:    Haskell2010