name:                deepcopy
version:             0.1.0.0
synopsis:            Generic copying of IORefs embedded deep in datatypes
-- description:
license:             BSD3
license-file:        LICENSE
author:              Daniel Gröber
maintainer:          dxld@darkboxed.org
-- copyright:
category:            Generics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:   Generics.DeepCopy
                     Generics.DeepCopy.GHC
                     Generics.DeepCopy.TH
                     Generics.DeepCopy.TH.Class
                     Debug
  -- other-extensions:
  build-depends:       base >=4.5 && <4.8
                     , ghc-prim
                     , template-haskell >= 2.5 && <2.10
                     , containers
                     , transformers
                     , mtl
  -- hs-source-dirs:
  default-language:    Haskell2010

executable test
  main-is:           Main.hs
  other-modules:     Generics.DeepCopy
                     Generics.DeepCopy.GHC
                     Generics.DeepCopy.TH
                     Generics.DeepCopy.TH.Class
                     Generics.DeepCopy.TH.Ty
                     Debug
  -- other-extensions:
  build-depends:       base >=4.5 && <4.8
                     , ghc-prim
                     , template-haskell >= 2.5 && <2.10
                     , containers
                     , transformers
                     , mtl

  default-language:    Haskell2010